--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ yew = { git = "https://github.com/yewstack/yew.git", features = ["csr"] }
 yewdux = { git = "https://github.com/intendednull/yewdux.git" }
 web-sys = "*"
 js-sys = "*"
+wasm-bindgen = "0.2"
