--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "lunar"
 version = "0.1.0"
-edition = "2018"
+edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -15,3 +15,4 @@ yewdux = { git = "https://github.com/intendednull/yewdux.git" }
 web-sys = "*"
 js-sys = "*"
 wasm-bindgen = "0.2"
+enum-display-derive = "0.1.1"
