--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,4 +17,5 @@ js-sys = "*"
 wasm-bindgen = "0.2"
 enum-display-derive = "0.1.1"
 random = "*"
-chrono = "*"
+chrono = { version = "0.4.20", features = ["serde"] }
+chronoutil = "0.2.3"
