Add new enemy on skirmish

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,5 +16,6 @@ web-sys = "*"
 js-sys = "*"
 wasm-bindgen = "0.2"
 enum-display-derive = "0.1.1"
-random = "*"
+getrandom = { version = "0.2", features = ["js"] }
+rand = "*"
 chrono = { version = "0.4.20", features = ["serde"] }
