--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,5 @@ enum-display-derive = "0.1.1"
 getrandom = { version = "0.2", features = ["js"] }
 rand = "*"
 chrono = { version = "0.4.20", features = ["serde"] }
+strum = { version = "0.24", features = ["derive"] }
+strum_macros = "0.24"
