--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -17,6 +17,16 @@ jobs:
         run: |
           rustup target add wasm32-unknown-unknown
           cargo install trunk
+      - name: Cache
+      - uses: actions/cache@v3
+        with:
+          path: |
+            ~/.cargo/bin/
+            ~/.cargo/registry/index/
+            ~/.cargo/registry/cache/
+            ~/.cargo/git/db/
+            target/
+          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
       - name: Build project
         run: trunk build --release
       - name: Deploy to Github pages
