--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -18,7 +18,7 @@ jobs:
           rustup target add wasm32-unknown-unknown
           cargo install trunk
       - name: Cache
-      - uses: actions/cache@v3
+        uses: actions/cache@v3
         with:
           path: |
             ~/.cargo/bin/
