Add .nojekyll file to allow access of wasm and js

--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -29,6 +29,9 @@ jobs:
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
       - name: Build project
         run: trunk build --release
+      # add .nojekyll file to tell GitHub pages to not treat this as a Jekyll project. (Allow files and folders starting with an underscore)
+      - name: Add .nojekyll file
+        run: touch .nojekyll
       - name: Deploy to Github pages
         if: success()
         uses: crazy-max/ghaction-github-pages@v2
