--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Setup Rust & Cargo dependencies environment
         run: |
           rustup target add wasm32-unknown-unknown
-          cargo install trunk
+          cargo install trunk --force
       - name: Build project
         run: trunk build --release
         # add .nojekyll file to tell GitHub pages to not treat this as a Jekyll project. (Allow files and folders starting with an underscore)
