--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -26,7 +26,13 @@ jobs:
       - name: Setup Rust & Cargo dependencies environment
         run: |
           rustup target add wasm32-unknown-unknown
-          cargo install trunk --force
+
+          if ! command -v trunk &> /dev/null
+          then
+              echo "trunk is not installed yet. Proceed to install.."
+              echo
+              cargo install trunk
+          fi
       - name: Build project
         run: trunk build --public-url "/lunar/" --release
         # add .nojekyll file to tell GitHub pages to not treat this as a Jekyll project. (Allow files and folders starting with an underscore)
