--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,11 @@ anyhow = "1.0"
 serde = { version = "1.0.114" }
 yew = { git = "https://github.com/yewstack/yew.git", features = ["csr"] }
 yewdux = { git = "https://github.com/intendednull/yewdux.git" }
-web-sys = { version = "0.3", features = ["HtmlInputElement", "Window"] }
+web-sys = { version = "0.3", features = [
+    "HtmlInputElement",
+    "Window",
+    "Event",
+] }
 js-sys = "*"
 wasm-bindgen = "0.2"
 enum-display-derive = "0.1.1"
