--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ web-sys = { version = "0.3", features = [
     "HtmlInputElement",
     "Window",
     "Event",
+    "InputEvent",
 ] }
 js-sys = "*"
 wasm-bindgen = "0.2"
